--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -43,9 +43,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-  assets:
-    - asset/test1.png
-    - asset/wallet.png
+#  assets:
+#    - asset/test1.png
+#    - asset/wallet.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
