--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^3.0.0
+  shimmer_animation: ^2.1.0
 
 dev_dependencies:
   flutter_test:
