--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
     sdk: flutter
   cached_network_image: ^3.0.0
   timeline_tile: ^2.0.0
+  path_provider: ^2.0.2
+  permission_handler: ^8.1.2
+  sprintf: ^6.0.0
 
 dev_dependencies:
   flutter_test:
