--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   path_provider: ^2.0.2
   permission_handler: ^8.1.2
   sprintf: ^6.0.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
