--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_component
 description: A Flutter component plugin.
-version: 0.1.0
+version: 1.0.0
 author:
 homepage:
 
@@ -11,12 +11,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: ^3.1.0
+  cached_network_image: ^3.2.0
   timeline_tile: ^2.0.0
-  path_provider: ^2.0.2
-  permission_handler: any
+  path_provider: ^2.0.4
+  permission_handler: ^7.2.0
   sprintf: ^6.0.0
-  shared_preferences: ^2.0.6
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
