--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_component
 description: A Flutter component plugin.
-version: 1.1.2
+version: 1.1.3
 homepage:
 
 environment:
@@ -18,6 +18,7 @@ dependencies:
   hive: ^2.2.3
   package_info_plus: ^1.4.3
   device_info_plus: ^4.0.1
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
