--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   device_info_plus: ^4.0.1
   url_launcher: ^6.1.5
   launch_review: ^3.0.1
-  
+  connectivity_plus: ^2.3.6+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
